Added reference to the source code.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
 <div class="container">
 
-    <div id="hampus">
+    <div id="hampus" style="float: left;">
 
     </div>
 
+    <div style="float: right">
+        Source code on GitHub: <a href="https://github.com/ArtComputerSE/hampus30.git">https://github.com/ArtComputerSE/hampus30.git</a>
+    </div>
 </div>
 <script type="text/javascript">
     var hampusDiv = document.getElementById('hampus');
