--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 <div class="container">
 
-    <div id="hampus" style="float: left;">
+    <div id="hampus" style="width: 100%;">
 
     </div>
 
-    <div style="float: right">
+    <div style="float: left">
         Source code on GitHub: <a href="https://github.com/ArtComputerSE/hampus30.git">https://github.com/ArtComputerSE/hampus30.git</a>
     </div>
 </div>
