Ported it to 0.19

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
     </div>
 </div>
 <script type="text/javascript">
-    var hampusDiv = document.getElementById('hampus');
-    Elm.Hampus.embed(hampusDiv);
+    Elm.Main.init({
+        node: document.getElementById("hampus")
+    });
 </script>
 </body>
 </html>
